ensure that drawer table fully visible on mobile

--- a/packages/commonwealth/client/scripts/views/components/component_kit/new_designs/CWDrawer/CWDrawer.scss
+++ b/packages/commonwealth/client/scripts/views/components/component_kit/new_designs/CWDrawer/CWDrawer.scss
@@ -55,7 +55,7 @@
   }
 
   @include extraSmall {
-    padding-bottom: 0px;
+    padding-bottom: 56px;
 
     .drawer-actions {
       gap: 4px;
